k8s-yaml/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prom-analysis
  labels:
    name: prom-analysis
