k8s-yaml/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prom-analysis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prom-analysis
  template:
    metadata:
      labels:
        app: prom-analysis
        app.kubernetes.io/name: prom-analysis
        app.kubernetes.io/component: service
        app.kubernetes.io/part-of: prom-analysis
        app.kubernetes.io/build-version: "0.2.8"
      annotations:
        instrumentation.opentelemetry.io/inject-python: "true"
    spec:
      containers:
        - name: prom-analysis
          image: mnroman/prom-analysis
          ports:
            - containerPort: 5000
          imagePullPolicy: Always
      imagePullSecrets:
      - name: regcred
