k8s-yaml/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
  name: ingress-prom-analysis
spec:
  rules:
  - host: test-app.local
    http:
      paths:
      - backend:
          service:
            name: prom-analysis-svc
            port:
              number: 5000
        path: /
        pathType: Prefix
